<resources>
    <string name="app_name">SGV</string>
    <string name="invalid_name">Preencha o nome.</string>
    <string name="invalid_email">Email invalido</string>
    <string name="invalid_password">Preencha a Senha</string>
    <string name="invalid_cpf">Preencha o CPF</string>
    <string name="invalid_phone">Preencha o Celular</string>
    <string name="access_your_account">Acesse sua conta</string>
    <string name="create_account">Crie sua conta grátis</string>
    <string name="register_btn">Cadastrar</string>
    <string name="role">Categoria</string>
    <string name="passanger">Passageiro</string>
    <string name="driver">Motorista</string>
    <string name="email">Email: </string>
    <string name="password">Senha</string>
    <string name="cpf">CPF</string>
    <string name="phone">Celular: </string>
    <string name="name">Nome: </string>
    <string name="invalid_form">Formulario Invalido</string>
    <string name="login_error">Erro ao logar</string>
    <string name="authenticationInfo">authenticationInfo</string>
    <string name="user_id">userId</string>
    <string name="token">token</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Rotas</string>
    <string name="menu_user_info">Perfil</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="user_register">Usuário Cadastrado</string>
    <string name="cep">CEP: </string>
    <string name="number">Número: </string>
    <string name="number_abbreviate">Nº: </string>
    <string name="address">Endereço: </string>
    <string name="address_title">Endereço</string>
    <string name="neighborhood">Bairro: </string>
    <string name="city">Cidade: </string>
    <string name="street">Rua: </string>
    <string name="save">Salvar</string>
    <string name="updatedUser">Dados Atualizados</string>
    <string name="updateUserError">Erro ao atualizar dados</string>
    <string name="vehicle">Veículo</string>
    <string name="vehicle_title">Veículo</string>
    <string name="route_title">Cadastro Rota</string>
    <string name="route_details">Rota - Detalhes</string>
    <string name="brand">Marca: </string>
    <string name="model">Modelo: </string>
    <string name="license_plate">Número da Placa: </string>
    <string name="plate">Placa: </string>
    <string name="number_of_seats">Número de Assentos: </string>
    <string name="seats">Assentos: </string>
    <string name="updatedVehicle">Veículo atualizado</string>
    <string name="route_crated">Rota criada</string>
    <string name="crate_route_error">Erro ao criar a rota</string>
    <string name="updatedVehicleError">Erro ao atualizar o veículo</string>
    <string name="institution">Instituição</string>
    <string name="noturnal">Noturno</string>
    <string name="day_time">Diurno</string>
    <string name="period">Periodo</string>
    <string name="title_activity_route_details">RouteDetailsActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="route_info">Informações</string>
    <string name="passangers">Passageiros</string>
    <string name="passanger_list">Adicionar Passageiro</string>
    <string name="description">Descrição</string>
    <string name="passenger_added">Passageiro Adicionado</string>
    <string name="want_to_add_passenger">Deseja adicionar o Passageiro </string>
    <string name="add_passenger">Adicionar Passageiro</string>
    <string name="change_route_status">Mudar Status da Rota</string>
    <string name="passenger_removed">Passageiro Removido</string>
    <string name="presence_confirmed">Presença Confirmada</string>
    <string name="remove_passenger">Remover Passageiro</string>
    <string name="confirm_presence">Confirmar Presença</string>
    <string name="want_to_remove_passenger">Deseja remover o Passageiro </string>
    <string name="want_to_confirm_presence">Deseja confirmar presença para a proxima viagem?</string>
    <string name="want_to_decline_presence">Deseja não confirmar presença para a proxima viagem?</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="initiate_preparation">Iniciar Preparação</string>
    <string name="initiate_travel">Iniciar Viagem</string>
    <string name="finish_travel">Terminar Viagem</string>
    <string name="status">Status</string>
    <string name="status_title">Status:</string>
    <string name="title_activity_driver_maps">Map</string>
    <string name="open_map">Abrir Mapa</string>
    <string name="share_location">Compartilhar Localização</string>
    <string name="google_link">Google Link</string>
</resources>