<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/create_account"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/userInfoName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/userInfoName"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        android:drawableStart="@drawable/ic_baseline_person_24" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/editPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userInfoName"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_baseline_email_24" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/editCpf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEmail"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_baseline_lock_24" />

    <EditText
        android:id="@+id/editCpf"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:drawableLeft="@drawable/ic_baseline_confirmation_number_24"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/cpf"
        android:inputType="number|textPassword"
        app:layout_constraintBottom_toTopOf="@+id/editPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPassword"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_baseline_confirmation_number_24" />

    <EditText
        android:id="@+id/editPhone"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:drawableLeft="@drawable/ic_baseline_phone_24"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="textPassword|phone"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCpf"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_baseline_phone_24" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/purple_500"
        android:text="@string/register_btn"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/role"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPhone" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/driverRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/driver"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/passangerRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/passanger"
            android:textSize="14sp" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>